# app/Http/Controllers/GalleryController.php
@@ -3,22 +3,37 @@
 namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Http;
 use App\Models\Post;
 
 class GalleryController extends Controller
 {
     public function index()
-{
- $data = array(
- 'id' => "posts",
- 'menu' => 'Gallery',
- 'galleries' => Post::where('picture', '!=',
-'')->whereNotNull('picture')->orderBy('created_at', 'desc')->paginate(30)
- );
- return view('gallery.index')->with($data);
-}
+    {
+        // Make an API request to get gallery data
+        $response = Http::get('http://127.0.0.1:8000/api/getGallery');
+
+        // Check if the request was successful
+        if ($response->successful()) {
+            // Decode the JSON response
+            $galleries = $response->json()['gallery'];
+
+            // Additional data if needed
+            $data = [
+                'id' => 'posts',
+                'menu' => 'Gallery',
+                'galleries' => $galleries,
+            ];
+
+            // Return view with data
+            return view('gallery.index')->with($data);
+        } else {
+            // Handle error, redirect, or show an error view
+            return redirect()->back()->with('error', 'Failed to fetch gallery data from the API');
+        }
+    }
 public function create()
-{
+{   
  return view('gallery.create');
 }
 
